feat: updates to Image and db relationships
