# apps/backend/src/models/__init__.py
@@ -1,6 +1,6 @@
 from .client import Client
+from .image import Image
 from .project import Project
-from .project_image import ProjectImage
 from .skill import Skill
 
-__all__ = ["Client", "Project", "ProjectImage", "Skill"]
+__all__ = ["Client", "Project", "Image", "Skill"]
