# apps/backend/src/resources/__init__.py
@@ -1,6 +1,6 @@
 from .client import client_ns
+from .image import image_ns
 from .project import project_ns
-from .project_image import project_image_ns
 from .skill import skill_ns
 
-__all__ = ["client_ns", "project_ns", "project_image_ns", "skill_ns"]
+__all__ = ["client_ns", "project_ns", "image_ns", "skill_ns"]
